# nosana-programs

./: .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .nosana-ci  .nosana-ci.yml  .pre-commit-config.yaml  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  idl.json  idl.tx  package-lock.json  package.json  tsconfig.json
common/: Cargo.toml
common/src/: address.rs  constants.rs  cpi.rs  error.rs  errors.rs  id.rs  ids.rs  lib.rs  macros.rs  pda.rs  utils.rs  writer.rs
docs/: common.md  deployment.md  development.md  getting-started.md  jobs.md  nodes.md  nosana_jobs.md  nosana_pools.md  nosana_rewards.md  nosana_staking.md  pools.md  rewards.md  staking.md
docs/diagrams/: jobs.md  nodes.md  pools.md  rewards.md  staking.md
migrations/: deploy.js
programs/jobs/: Cargo.toml
programs/jobs/src/: error.rs  lib.rs  macros.rs  state.rs  utils.rs
programs/jobs/src/instructions/: claim_job.rs  create_job.rs  finish_job.rs  get_job.rs  init_project.rs  init_vault.rs  initialize_project.rs  list_jobs.rs  mod.rs
programs/nosana-common/: Cargo.toml
programs/nosana-common/src/: error.rs  ids.rs  lib.rs
programs/nosana-jobs/: Cargo.toml
programs/nosana-jobs/src/: error.rs  errors.rs  ids.rs  lib.rs  macros.rs  security.rs  state.rs  types.rs  utils.rs
programs/nosana-jobs/src/instructions/: assign.rs  cancel.rs  cancel_job.rs  claim.rs  claim_job.rs  clean.rs  clean_admin.rs  close.rs  close_admin.rs  close_job.rs  complete.rs  create.rs  create_job.rs  delist.rs  end.rs  enter.rs  exit.rs  extend.rs  finish.rs  finish_job.rs  init.rs  init_vault.rs  list.rs  mod.rs  open.rs  quit.rs  quit_admin.rs  reclaim.rs  reclaim_job.rs  recover.rs  start.rs  stop.rs  update.rs  work.rs
programs/nosana-nodes/: Cargo.toml
programs/nosana-nodes/src/: errors.rs  lib.rs  security.rs  state.rs  types.rs
programs/nosana-nodes/src/instructions/: audit.rs  mod.rs  register.rs  update.rs
programs/nosana-pools/: Cargo.toml
programs/nosana-pools/src/: errors.rs  lib.rs  macros.rs  security.rs  state.rs  types.rs
programs/nosana-pools/src/instructions/: claim.rs  claim_fee.rs  claim_transfer.rs  close.rs  mod.rs  open.rs  update_beneficiary.rs
programs/nosana-rewards/: Cargo.toml
programs/nosana-rewards/src/: lib.rs  macros.rs  security.rs  state.rs  utils.rs
programs/nosana-rewards/src/instructions/: add_fee.rs  claim.rs  close.rs  enter.rs  init.rs  migrate_stats.rs  mod.rs  sync.rs
programs/nosana-staking/: Cargo.toml
programs/nosana-staking/src/: error.rs  errors.rs  ids.rs  lib.rs  macros.rs  security.rs  state.rs  utils.rs
programs/nosana-staking/src/instructions/: claim.rs  close.rs  emit_price.rs  emit_rank.rs  extend.rs  get_xnos.rs  init.rs  init_vault.rs  mod.rs  restake.rs  slash.rs  stake.rs  topup.rs  unstake.rs  update_authority.rs  update_settings.rs  update_slash_authority.rs  withdraw.rs
programs/nosana-staking/tests/: test_compressed_stake.rs
programs/nosana-voting-hook/: Cargo.toml
programs/nosana-voting-hook/src/: lib.rs
programs/nosana_jobs/: Cargo.toml
programs/nosana_jobs/src/: error.rs  ids.rs  lib.rs  state.rs
programs/nosana_jobs/src/instructions/: cancel_job.rs  claim_job.rs  create_job.rs  finish_job.rs  init_project.rs  init_vault.rs  mod.rs
programs/staking/: Cargo.toml
programs/staking/src/: events.rs  ids.rs  lib.rs  macros.rs  state.rs  utils.rs
programs/staking/src/instructions/: create_job.rs
scripts/: README.md  build.sh  claim-fee-pool.js  claim-fee-pool.ts  close-buffers.ts  close-markets-admin.ts  close-markets.ts  combine-txs.ts  create-fee-dist-pool.js  create-fee-dist-pool.ts  create-market.ts  create-nodes-queue.ts  create-vesting-pool.ts  draw-mint-pass-lottery.ts  generate-docs.ts  get-staking-address.ts  init-rewards.js  init-rewards.ts  migrate-stats.ts  open-market.ts  prepare.sh  register-nodes.ts  sync-rewards.js  sync-rewards.ts  update-market.ts  upgrade.sh
tests/: 0_init.ts  1_staking.ts  2_rewards.ts  3_jobs.ts  4_pools.ts  constants.ts  contstants.ts  jobs.js  staking.js  tests-rewards.ts  tests.js  tests.ts  utils.js  utils.ts
tests/data/: market.json  pool.json  pools.json  users.json  vesting.json
tests/keys/: devr1BGQndEW5k5zfvG5FsLyZv1Ap73vNgAHcQ9sUVP.json  dumQVNHZ1KNcLmzjMaDPEA5vFCzwHEEcQmZ8JHmmCNH.json  dumxV9afosyVJ5LNGUmeo4JpuajWXRJ9SH8Mc8B3cGn.json  test65Hm1uoXA4C7BgiWddh9PHUTvgmKPVXAn13fvHy.json  testTfjx9bNFDdHQpk5iapa6YHkdRVhLT3cYkS2nVav.json  testsKbCqE8T1ndjY4kNmirvyxjajKvyp1QTDmdGwrp.json  testzMFv8LK3mjsJdakJ2LQPGpWPPQhZ3QiriRWzJUM.json
tests/suites/: 0-initialization-tests.ts  0-setup-globals.ts  1-initialization-tests.js  1-initialization-tests.ts  1-nosana-staking-tests.ts  2-nosana-rewards-tests.ts  2-nosana-staking-init-tests.ts  2-nosana-staking-tests.js  2-nosana-staking-tests.ts  3-nosana-pools-tests.ts  3-nosana-rewards-init-tests.ts  3-nosana-rewards-tests.js  3-nosana-rewards-tests.ts  4-nosana-jobs-tests.ts  4-nosana-pools-tests.js  4-nosana-pools-tests.ts  5-nosana-jobs-tests.js  5-nosana-jobs-tests.ts  6-nosana-nodes-tests.ts  6-rewards-scenario-tests.ts
tests/suites/scenario/: assign-jobs.ts  claim-transfer-tests.ts  rewards-tests.ts  stop-job-queued-tests.ts  stop-job-running-tests.ts  stop-job-tests.ts
tests/suites/types/: global.d.ts  mocha.d.ts
tests/types/: global.d.ts  mocha.d.ts  nosana-types.d.ts  nosana.d.ts
