[package]
name = "nosana-jobs"
version = "0.1.0"
description = "Nosana Jobs for decentralized computation."
edition = "2021"
homepage = "https://nosana.io/"
authors = ["nosana"]
license = "MIT"
keywords = ["solana", "nosana", "gpu", "jobs", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_jobs"

[features]
devnet = ["nosana-common/devnet"]
mainnet = ["nosana-common/mainnet"]
no-entrypoint = []
cpi = ["no-entrypoint", "nosana-common/cpi"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "nosana-common/idl-build"]
no-idl = []
no-log-ix-name = []
anchor-debug = ["nosana-common/anchor-debug"]
custom-heap = ["nosana-common/custom-heap"]
custom-panic = ["nosana-common/custom-panic"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
mpl-token-metadata = "5.1.1"
nosana-staking = { path = "../nosana-staking", features = ["cpi"] }
nosana-rewards = { path = "../nosana-rewards", features = ["cpi"] }
nosana-common = { path = "../../common", features = ["no-entrypoint"] }
