[package]
name = "nosana-nodes"
version = "0.1.0"
description = "Nosana Pools."
edition = "2021"
homepage = "https://nosana.io/"
authors = ["nosana"]
license = "MIT"
keywords = ["solana", "nosana", "cicd", "nodes", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_nodes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
nosana-common = { path = "../../common" }
