[package]
name = "nosana-staking"
version = "0.1.0"
description = "Nosana Staking for decentralized computation."
edition = "2021"
homepage = "https://nosana.com/"
authors = ["nosana"]
license = "MIT"
keywords = ["solana", "nosana", "gpu", "staking", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_staking"

[features]
devnet = ["nosana-common/devnet"]
mainnet = ["nosana-common/mainnet"]
no-entrypoint = []
cpi = ["no-entrypoint", "nosana-common/cpi"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "nosana-common/idl-build"]
no-idl = []
no-log-ix-name = []
anchor-debug = ["nosana-common/anchor-debug"]
custom-heap = ["nosana-common/custom-heap"]
custom-panic = ["nosana-common/custom-panic"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
nosana-common = { path = "../../common" }
