[package]
name = "voting-token-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.1"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
borsh = "1.5"

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
