[package]
name = "nosana_jobs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_jobs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
#mainnet = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
